# reimagined-telegram

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: template-pr.md
.github/ISSUE_TEMPLATE/: template-issue.md
pm/phase0/: architecture.md  environment.md  example-issue.md  example-pr.md  intent.md  user_experience.md
pm/phase1/: intent.md
src/azure_things/: __init__.py  config.py  main.py
src/azure_things/azure/: __init__.py  auth.py  client.py  models.py
src/azure_things/storage/: __init__.py  cache.py  credentials.py
src/azure_things/ui/: __init__.py  app.py  settings.py  sidebar.py  task_item.py  task_list.py  theme.py
src/azure_things/utils/: __init__.py  mapper.py  validators.py
tests/: __init__.py  test_config.py
tests/azure/: __init__.py  test_auth.py  test_client.py  test_models.py
tests/storage/: test_cache.py  test_credentials.py
tests/ui/: test_app.py  test_theme.py
tests/utils/: test_mapper.py  test_validators.py
